--- a/README
+++ b/README
@@ -1,4 +1,6 @@
-PulseOS v0.1 
+##PulseOS v0.1 
+
+!!!Dependencies unmet, Needs lots of fixing!!!
 
 A friendly neighbourhood operating system with a 32 bit kernel. PulseOS is a hobby project heavily based 
 upon the Bran's kernel development tutorial. Aims are to make PulseOS a fully functional Server operating
